# fax-machine-box

./: .gitignore  LEARNINGS.md  README.md  SESSION_LOG.md  SPEC.md  pyproject.toml
docs/: service-comparison.md
preview/: box-parts.js  index.html  main.js
src/faxbox/: __init__.py  config.py  generate_drawers.py  generate_lids.py  layout.py  lid_generator.py  shell_generator.py  test_generator.py
tests/: conftest.py  test_dimensions.py
